A few sprite editor fixes (#6106)
* Don't delete marquee selection when closing the sprite editor

* Prevent panning too far

* Bringing back coordinate preview

--- a/theme/image-editor/bottomBar.less
+++ b/theme/image-editor/bottomBar.less
@@ -20,6 +20,7 @@
 .image-editor-coordinate-preview {
     flex-grow: 1;
     height: 100%;
+    line-height: 2rem;
     color: var(--sidebar-label-color);
 }
 
